Persistent topics support implementation